--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
     font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-
-}
-
-body{
     font-size: 14px;
     font-family: arial,sans-serif;
     color: #222;
@@ -98,8 +94,70 @@ li{
     font-size: 13px;
 }
 
-.top-link:last-child{
+.header>ul>li:nth-child(2)>a{
     padding-right: 15px;
+}
+
+.logo{
+    height:200px;
+    text-align: center;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.search-wrap{
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    height: 34px;
+    margin: auto;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    padding: 5px 16px 5px 14px;
+    margin-top: 20px;
+}
+
+.search, .mic{
+    padding: 7px 2px;
+}
+
+.search>img{
+    width: 20px;
+}
+
+.input{
+    border: none;
+    outline: none;
+    height: 34px;
+    padding: 0 8px 0 13px;
+    font-size: 16px;
+    width: 476px;
+    color: rgba(0,0,0,.87);
+}
+
+.mic:hover{
+    cursor: pointer;
+}
+
+.buttons{
+    padding-top: 29px;
+    text-align: center;
+}
+
+.submit{
+    margin: 0 4px;
+    padding: 0 16px;
+    height: 36px;
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color:#3c4043;
+}
+
+.submit:hover{
+    cursor: pointer;
+    border-color: rgb(133, 133, 133);
 }
 
 .footer{
